// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <SearchBox/> should display the component correctly 1`] = `
Array [
  <header
    className="header"
  >
    <div>
      <img
        alt="logo_ml"
        className="meli-logo"
        onClick={[Function]}
        src="logo_ml.png"
        title="Mercado Libre - Donde comprar y vender de todo"
      />
      <form
        onSubmit={[Function]}
      >
        <input
          id="serach_input"
          name="search"
          onChange={[Function]}
          placeholder="Buscar productos, marcas y más"
          type="text"
          value=""
        />
        <button>
          <img
            alt="ic_search"
            src="ic_search.png"
            title="Buscar"
          />
        </button>
      </form>
    </div>
  </header>,
  "",
]
`;

exports[`Test in <SearchBox/> should display the component correctly 2`] = `
Object {
  "action": "POP",
  "block": [Function],
  "canGo": [Function],
  "createHref": [Function],
  "entries": Array [
    Object {
      "hash": "",
      "key": "pum2lh",
      "pathname": "/",
      "search": "",
      "state": undefined,
    },
  ],
  "go": [Function],
  "goBack": [Function],
  "goForward": [Function],
  "index": 0,
  "length": 1,
  "listen": [Function],
  "location": Object {
    "hash": "",
    "key": "pum2lh",
    "pathname": "/",
    "search": "",
    "state": undefined,
  },
  "push": [Function],
  "replace": [Function],
}
`;

exports[`Test in <SearchBox/> should display the component correctly 3`] = `
Object {
  "hash": "",
  "key": "pum2lh",
  "pathname": "/",
  "search": "",
  "state": undefined,
}
`;
